Moved schema for UB into openapi.yaml
