# financetrackingbackend/src/main/java/com/financetrackingbackend/schemas/ulsterbank/UlsterbankAccessToken.java
@@ -1,22 +1,0 @@
-package com.financetrackingbackend.schemas.ulsterbank;
-
-import com.fasterxml.jackson.annotation.JsonProperty;
-import lombok.AllArgsConstructor;
-import lombok.Data;
-import lombok.NoArgsConstructor;
-
-@AllArgsConstructor
-@NoArgsConstructor
-@Data
-public class UlsterbankAccessToken {
-    @JsonProperty("token_type")
-    private String tokenType;
-    @JsonProperty("access_token")
-    private String accessToken;
-    @JsonProperty("expires_in")
-    private String expiresIn;
-    @JsonProperty("scope")
-    private String scope;
-    @JsonProperty("refresh_token")
-    private String refreshToken;
-}
